fix author info getting cut off on top of screen

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@ body{
 .author-info{
     display: flex;
     padding-top: 50px;
+    margin-top: 50px;
 }
 
 .author-info a{
